force-app/main/default/objects/vlocity_cmt__OpportunityDiscount__c/vlocity_cmt__OpportunityDiscount__c.object-meta.xml
<CustomObject>
    <description>The Opportunity Discount identifies the current or revised discount which may be necessary to win the opportunity. Used for example when there is an opportunity to renew or upgrade a customer&apos;s services and that customer has standing discounts.</description>
    <label>Opportunity Discount</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>