force-app/main/default/objects/vlocity_cmt__OpportunityDiscount__c/fields/vlocity_cmt__ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ApprovalStatus__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>